<resources>
    <string name="app_name">StayInTouch</string>

    <!-- Login Fragment -->
    <string name="loginFragmentEmailHint">Email</string>
    <string name="loginFragmentPasswordHint">Password</string>
    <string name="loginFragmentLoginButtonText">Login</string>
    <string name="loginFragmentNewAccountText">Create New Account</string>

    <!-- Sign Up Fragment -->
    <string name="signupFragmentNameHint">User First Last Name</string>
    <string name="signupFragmentEmailHint">Email</string>
    <string name="signupFragmentPhoneHint">Phone Number</string>
    <string name="signupFragmentPasswordHint">Password</string>
    <string name="signupFragmentConfirmPasswordHint">Confirm Password</string>
    <string name="signupFragmentSignUpButtonText">Sign Up</string>
    <string name="signupFragmentCancelButtonText">Cancel</string>

    <!-- View Messages Fragment -->
    <string name="viewMessagesFragmentNameTextView">FirstName LastName</string>
    <string name="viewMessagesFragmentMessageTextView">Message text here</string>
    <string name="viewMessagesFragmentTimestampTextView">MM/DD/YYYY HH:MM</string>
    <string name="viewMessagesFragmentMessageEditText">Enter message</string>
    <string name="viewMessagesFragmentSendButton">Send</string>

    <!-- View Contacts Activity -->
    <string name="viewContactPhoneLabel">Phone #:</string>
    <string name="viewContactNameLabel">Name:</string>
    <string name="viewContactEmailLabel">Email:</string>

    <!-- Navigation Drawer Items -->
    <string-array name="navigationDrawerItems">
        <item>Contacts</item>
        <item>Conversations</item>
        <item>Archived</item>
        <item>Settings</item>
        <item>Log out</item>
        <item>Exit</item>
    </string-array>

    <string name="drawer_open"></string>
    <string name="drawer_close"></string>




</resources>
