<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.group26.stayintouchwithfragments.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signupFragmentNameEditText"
            android:hint="@string/signupFragmentNameHint"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signupFragmentEmailEditText"
            android:layout_below="@id/signupFragmentNameEditText"
            android:hint="@string/signupFragmentEmailHint"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/signupFragmentPhoneNumberEditText"
            android:layout_below="@id/signupFragmentEmailEditText"
            android:hint="@string/signupFragmentPhoneHint"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signupFragmentPasswordEditText"
            android:layout_below="@id/signupFragmentPhoneNumberEditText"
            android:hint="@string/signupFragmentPasswordHint"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signupFragmentPasswordConfirmationEditText"
            android:layout_below="@id/signupFragmentPasswordEditText"
            android:hint="@string/signupFragmentConfirmPasswordHint"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupFragmentSignUpButtonText"
            android:id="@+id/signupFragmentSignUpButton"
            android:layout_below="@id/signupFragmentPasswordConfirmationEditText"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupFragmentCancelButtonText"
            android:id="@+id/signupFragmentCancelButton"
            android:layout_below="@id/signupFragmentSignUpButton"
            android:layout_marginTop="10dp"/>


    </RelativeLayout>

</FrameLayout>
